@@ -1,7 +1,7 @@
 /*
  *  streams library
  *
- *  Copyright (C) 2011-2012 by Christian Bockermann, Hendrik Blom
+ *  Copyright (C) 2011-2014 by Christian Bockermann, Hendrik Blom
  * 
  *  streams is a library, API and runtime environment for processing high
  *  volume data streams. It is composed of three submodules "stream-api",
@@ -80,10 +80,10 @@ public class ParameterInjection {
 
 		Object embedded = params.get(BodyContent.KEY);
 
-        checkForMissingParametersAndSetters(o, params);
+		// check annotations for parameters
+		checkForMissingParametersAndSetters(o, params);
 
-
-        // now, walk over all methods and check if one of these is a setter of a
+		// now, walk over all methods and check if one of these is a setter of a
 		// corresponding
 		// key value in the parameter map
 		//
@@ -157,7 +157,6 @@ public class ParameterInjection {
 						if (t[0].isPrimitive()) {
 							String in = params.get(k).toString();
 
-
 							if (t[0] == Double.TYPE)
 								po = new Double(in);
 
@@ -165,7 +164,7 @@ public class ParameterInjection {
 								po = new Integer(in);
 
 							if (t[0] == Boolean.TYPE)
-								po = new Boolean(in);
+								po = Boolean.valueOf(in);
 
 							if (t[0] == Float.TYPE)
 								po = new Float(in);
@@ -201,13 +200,19 @@ public class ParameterInjection {
 								try {
 									Constructor<?> c = t[0]
 											.getConstructor(String.class);
-									po = c.newInstance(params.get(k).toString());
+									String s = params.get(k).toString();
+									po = c.newInstance(s);
 									log.debug("Invoking {}({})", m.getName(),
 											po);
 								} catch (NoSuchMethodException nsm) {
 									log.error(
 											"No String-constructor found for type {} of method {}",
 											t, m.getName());
+								} catch (Exception e) {
+									throw new IllegalArgumentException(
+											"Error in Object:" + o.toString()
+													+ " method:" + m + " key:"
+													+ k, e);
 								}
 							}
 						}
@@ -222,58 +227,113 @@ public class ParameterInjection {
 		return alreadySet;
 	}
 
-    /**
-     * This methods checks for the XMLParameter annotation in the processor and if the corresponindg parameters
-     * or setter methods are missing. A new ParameterException will be thrown in both cases
-     *
-     * @param o the processor instance
-     * @param params the params map from the xml file
-     *
-     * @throws stream.annotations.ParameterException in case parameter or setter is missing
-     */
-    private static void checkForMissingParametersAndSetters(Object o, Map<String, ?> params) throws ParameterException {
-        //iterate through all fields and get their annotations. If annotation is present check for
-        // parameters from xml file
-        for ( Field field : o.getClass().getDeclaredFields() ){
-            if ( field.isAnnotationPresent( Parameter.class ) ){
-                log.debug("Has XMLParameter annotation " + field.toString());
-                boolean required = field.getAnnotation(Parameter.class).required();
+	/**
+	 * This methods checks for the XMLParameter annotation in the processor and
+	 * if the corresponindg parameters or setter methods are missing. A new
+	 * ParameterException will be thrown in both cases
+	 * 
+	 * @param o
+	 *            the processor instance
+	 * @param params
+	 *            the params map from the xml file
+	 * 
+	 * @throws stream.annotations.ParameterException
+	 *             in case parameter or setter is missing
+	 */
+	private static void checkForMissingParametersAndSetters(Object o,
+			Map<String, ?> params) throws ParameterException {
 
-                //if field is nonoptional it has to have a value defined in the .xml file
-                if (required){
-                    boolean xmlHasParameter = params.containsKey(field.getName())
-                            && (  params.get(field.getName()) != null  );
-                    if (!xmlHasParameter){
-                        throw new ParameterException("XML is missing parameter " + field.getName()
-                                + " for processor " + o.getClass().getSimpleName());
-                    }
-                }
+		if (!"false".equalsIgnoreCase(System
+				.getProperty("parameter.validate.setter"))) {
+			for (Method m : o.getClass().getMethods()) {
 
-                boolean setterMissing = true;
-                for(Method m : o.getClass().getDeclaredMethods()){
-                    if (m.getName().toLowerCase().equalsIgnoreCase("set" + field.getName())){
-                        // we found the matching setter for our parameter. Now lets see if there is another annotation
-                        // and if the required flag is the same as the one in the field annotation
-                        if(m.isAnnotationPresent(Parameter.class)){
-                            if(required != m.getAnnotation(Parameter.class).required()){
-                                throw new ParameterException("The required flags in the annotations for the parameter" +
-                                        field.getName() + " fields and setter do not match ");
-                            }
-                        }
+				if (ParameterDiscovery.isSetter(m)) {
 
-                        setterMissing = false;
-                        break;
-                    }
-                }
-                if (setterMissing){
-                    throw new ParameterException("Processor " + o.getClass().getSimpleName()
-                            + " is missing setter method for field " + field.getName());
-                }
-             }
-        }
-    }
+					String name = ParameterDiscovery.getParameterName(m);
 
-    public static void injectSystemProperties(Object object, String prefix)
+					Parameter pa = m.getAnnotation(Parameter.class);
+					if (pa != null && pa.required()
+							&& !params.containsKey(name)) {
+						throw new ParameterException("Required parameter '"
+								+ name + "' for class '" + o.getClass()
+								+ "' not provided by configuration!");
+					}
+				}
+			}
+		} else {
+			log.debug("Validation of method annotations disabled.");
+		}
+
+		// iterate through all fields and get their annotations. If annotation
+		// is present check for
+		// parameters from xml file
+
+		if (!"false".equalsIgnoreCase(System
+				.getProperty("parameter.validate.fields"))) {
+
+			for (Field field : o.getClass().getDeclaredFields()) {
+				if (field.isAnnotationPresent(Parameter.class)) {
+					log.debug("Has Parameter annotation " + field.toString());
+					boolean required = field.getAnnotation(Parameter.class)
+							.required();
+
+					String xmlName = field.getName();
+
+					// check if annotation has a value for name. If thats the
+					// case
+					// the parameter will be named differently
+					// in the xml file.
+					if (!field.getAnnotation(Parameter.class).name().isEmpty()) {
+						xmlName = field.getAnnotation(Parameter.class).name();
+					}
+
+					// if field is required it has to have a value defined in
+					// the
+					// .xml file
+					if (required) {
+						boolean xmlHasParameter = params.containsKey(xmlName)
+								&& (params.get(xmlName) != null);
+						if (!xmlHasParameter) {
+							throw new ParameterException(
+									"XML is missing parameter " + xmlName
+											+ " for field " + field.getName()
+											+ " in processor "
+											+ o.getClass().getSimpleName());
+						}
+					}
+
+					boolean setterMissing = true;
+					for (Method m : o.getClass().getDeclaredMethods()) {
+						if (m.getName().toLowerCase()
+								.equalsIgnoreCase("set" + field.getName())) {
+							// we found the matching setter for our parameter.
+							// Now
+							// lets see if there is another annotation
+							// and create a warning if so
+							if (m.isAnnotationPresent(Parameter.class)) {
+								log.warn("There are conflicting annotations for the field "
+										+ field.getName()
+										+ ". Remove annotation from method "
+										+ m.getName() + ".");
+							}
+							setterMissing = false;
+							break;
+						}
+					}
+					if (setterMissing) {
+						throw new ParameterException("Processor "
+								+ o.getClass().getSimpleName()
+								+ " is missing setter method for field "
+								+ field.getName());
+					}
+				}
+			}
+		} else {
+			log.debug("Field validation disabled!");
+		}
+	}
+
+	public static void injectSystemProperties(Object object, String prefix)
 			throws Exception {
 		Map<String, String> params = ParameterDiscovery
 				.getSystemProperties(prefix);
